--- a/frontend/justso.scss
+++ b/frontend/justso.scss
@@ -34,7 +34,7 @@ body {
       display: inline-block;
       min-height: 1.4em;
       line-height: 1.4em;
-      margin: 2px 0 -5px;
+      margin: 2px 0;
       vertical-align: top;
     }
     span:first-of-type {
